# test_repo

./: .gitignore  LICENSE  README.md  conda_env_export.yml  conda_env_export_editable.yml  conda_list_explicit.txt  conda_list_explicit_editable.txt  gpu_tests.py  myenv-editable-install.yml  myenv.yml  pyproject.toml  requirements.txt  requirements_with_cv2.txt  requirements_with_editable.txt  requirements_with_git.txt  requirements_with_google_repository.txt  setup.cfg  setup.py
example_package/: example.py
poetry_editable/: pyproject.toml
poetry_editable/foo_package/: main.py
poetry_with_git/: pyproject.toml
poetry_with_google_repository/: pyproject.toml
