[tool.poetry]
name = "poetry_with_git"
version = "0.1.0"
description = ""
authors = ["Hyunho Richard Lee <hrichardlee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = { git = "https://github.com/requests/requests.git", branch = "main" }
meadowrun = "^0.1.13"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
